Added styles with styled-components. Added accounting for currency format.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/aether7/adessa-frontend-test#readme",
   "dependencies": {
+    "accounting": "^0.4.1",
     "consolidate": "^0.14.5",
     "express": "^4.14.0",
     "handlebars": "^4.0.6",
@@ -29,7 +30,9 @@
     "redux": "^3.7.2",
     "redux-localstorage": "^0.4.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^2.4.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
