--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "webpack": "webpack --progress --colors --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -36,10 +36,13 @@
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
+    "babel-jest": "^22.0.4",
     "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-3": "^6.22.0",
+    "jest": "^22.0.4",
     "nodemon": "^1.11.0",
     "prop-types": "^15.5.10",
     "webpack": "^2.2.0",
